--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="container">
         <div class="one">
             <h1 class="one">
-                Hi
-                <span id="name">Irene</span>
+                HELLO
+                <span id="name">Anh Lê Văn Hùng aka H96</span>
             </h1>
-            <p class="two" id="greetingText">I really like your name btw!</p>
+            <p class="two" id="greetingText">Hôm nay là ngày gì nhỉ?</p>
         </div>
 
         <div class="three">
@@ -39,23 +39,23 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Sinh nhật vui vẻ nhaaa, tuổi mới ngoan ngoãn nghe lời em hơn nhaa
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what I was going to do.</p>
-            <p class="idea-2">But then I stopped.</p>
+            <p class="idea-1">Chúc anh luôn vui vẻ, yêu đời và yêu em!</p>
+            <p class="idea-2">Nhiều sức khỏe</p>
             <p class="idea-3">
-                I realised, I wanted to do something<br>
-                <strong>special</strong>
+                Ăn nhiều không lo béo<br>
+                <strong>Sớm giàu</strong>
                 .
             </p>
-            <p class="idea-4">Because,</p>
+            <p class="idea-4">And</p>
             <p class="idea-5">
-                You are Special
+                Bao nuôi emm!
                 <span>:)</span>
             </p>
             <p class="idea-6">
@@ -142,8 +142,7 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+          
             <p class="last-smile">:)</p>
         </div>
     </div>
