--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h5 id="wishText">Tuế tuế bình, tuế tuế an, tuế tuế bình an ;)</h5>
             </div>
         </div>
 
