--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 HELLO
-                <span id="name">Anh Lê Văn Hùng aka H96</span>
+                <span id="name">Anh H96</span>
             </h1>
             <p class="two" id="greetingText">Hôm nay là ngày gì nhỉ?</p>
         </div>
